[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernpy"
version = "1.6.2"
authors = [
    { name = "David Rizo Valero", email = "drizo@ua.es"},
    { name = "Joan Cerveto Serrano", email = "joan.cerveto@ua.es"}
]
description = "Python Humdrum **kern and **mens utilities"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "AGPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "Pillow",
    "requests",
    "urllib3>=1.26.6",
]

[project.urls]
Homepage = "https://github.com/OMR-PRAIG-UA-ES/kernpy"
Documentation = "https://github.com/OMR-PRAIG-UA-ES/kernpy#readme"
Issues = "https://github.com/OMR-PRAIG-UA-ES/kernpy/issues"

[tool.hatch.build.targets.wheel]
include = ["kernpy/**"]

[dependency-groups]
test = [
    "parameterized>=0.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.7",
    "pymdown-extensions>=9.0",
]
